fixed main page spacing + removed debug block from experience + added in linkedin to footer

--- a/static/css/experience.css
+++ b/static/css/experience.css
@@ -24,6 +24,9 @@
 .experience-company:first-child::before {
   display: none;
 }
+.experience-company:last-child {
+  margin-bottom: 0;
+}
 
 .experience-company::before {
   content: "";
